deploy/sites/koryomi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koryomi
  labels:
    app: koryomi
spec:
  type: ClusterIP
  selector:
    app: koryomi
  ports:
    - name: http
      port: 80
      targetPort: http
